--- a/html/tp-1/Ejercicio5/Ejercicio5.html
+++ b/html/tp-1/Ejercicio5/Ejercicio5.html
@@ -6,6 +6,117 @@
     <title>Exercise5</title>
 </head>
 <body>
-    Estamos trabajando en esta pagina, por favor espere...
+    <header>
+
+    </header>
+    <section>
+        <img src="imagen1.jpg" alt="">
+
+        <table border>
+            <tr>
+                <th>Alojamiento</th>
+                <th>Dirección</th>
+                <th>Telefono</th>
+            </tr>
+            <tr>
+                <td>Hotel Santé</td>
+                <td>25 de mayo 53 SUR.<br> A dos cuadras y media de la plaza principal</td>
+                <td>3837-471798 jaledcabur@hotmail.com.ar - santehostal@live.com</td>
+            </tr>
+            <tr>
+                <td>Hotel Nicolas	</td>
+                <td>Pte. Perón 231	</td>
+                <td>03837-420028</td>
+            </tr>
+            <tr>
+                <td>Hotel de Turismo</td>
+                <td>25 de Mayo Esq. Moreno</td>
+                <td>03837-421088</td>
+            </tr>
+            <tr>
+                <td>Hotel Casa Grande</td>
+                <td>Moreno 801</td>
+                <td>03837-421140 / 1168404638</td>
+            </tr>
+            <tr>
+                <td>Hotel San José</td>
+                <td>Dr. Antonio del Pino 425</td>
+                <td>03837-693628</td>
+            </tr>
+            <tr>
+                <td>Hotel María Elena</td>
+                <td>El Puesto</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Las Pircas Hotel Boutique</td>
+                <td>Anillaco</td>
+                <td>3835 483176</td>
+            </tr>
+            <tr>
+                <td>Hostal Sisabel</td>
+                <td>Calle 12 de Octubre B° Jardin</td>
+                <td>03837 434672 / 2974430419</td>
+            </tr>
+            <tr>
+                <td>Hostal Las Parinas</td>
+                <td>Moreno 439</td>
+                <td>03837-420416</td>
+            </tr>
+            <tr>
+                <td>Hosteria Novel</td>
+                <td>Av. Córdoba 200</td>
+                <td>03837-435314</td>
+            </tr>
+            <tr>
+                <td>Hosteria El Antigal</td>
+                <td>Copacabana</td>
+                <td>03837-15414944</td>
+            </tr>
+            <tr>
+                <td>Residencia el Viajante</td>
+                <td>Av. Illia s/n</td>
+                <td>03837-420830</td>
+            </tr>
+            <tr>
+                <td>Residencia San Francisco</td>
+                <td>Moreno 784</td>
+                <td>03837-475201</td>
+            </tr>
+            <tr>
+                <td>Residencia El Emperador</td>
+                <td>Catamarca 655</td>
+                <td>03837-420702</td>
+            </tr>
+           </table>
+           <hr>
+           <h1>Hostal Santé</h1>
+           <p>El hostal esta compuesto por 10 habitaciones de las cuales 7 se encuentran en la parte inferior y 3 en 1 piso acceso por escalera. todas las habitaciones cuentan con, baño privado, tv, wifi, aire acondicionado frio calor. heladera frigobar. Nuestros baños son amplios, y contamos con una habitacion adaptada para personas con discapacidad motris ( siempre consultar disponibilidad) los baños estan provistos de bidet, secador de pelo. en nuestras instalaciones contamos con wi-fi en todo el establecimiento. servicio de estacionamiento, patio, bar kincho con asadores y acceso a una cocina de uso comun            </p>
+           <p>Ubicacion: 25 de mayo 53 SUR. a dos cuadras y media de la plaza principal</p>
+           <p>Datos de Contacto Whatsapp : +5493737471798</p>
+           <p>Mail : jaledcabur@hotmail.com.ar santehostal@live.com</p>
+           <div>
+            <img src="imagen2.jpg" alt="">
+            <img src="imagen3.jpg" alt="">
+            <img src="imagen4.jpg" alt="">
+           </div>
+           <hr>
+           <h1>Hotel de Turismo</h1>
+           <img src="imagen5.jpg" alt="">
+           <hr>
+           <h1>Casagrande Hotel Boutique de Adobe</h1>
+           <p>Casagrande Hotel de Adobe, es un hotel boutique con Piscina, Jacuzzi, Restaurante y Winery. Ubicado a 200mts de la plaza principal, forman parte de La Ruta del Adobe con un casco historico del año 1890.</p>
+           <p>Pagina Web: https://www.casagrandetour.com</p>
+           <p>Ubicacion: Moreno 801</p>
+           <p>Mail : Info@casagrandetour.com</p>
+           <p>Telefono Fijo : 03837 421140</p>
+           <img src="imagen6.jpg" alt="">
+           <img src="imagen7.jpg" alt="">
+           <img src="imagen8.jpg" alt="">
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
