--- a/html/tp-1/Ejercicio5/Ejercicio5.html
+++ b/html/tp-1/Ejercicio5/Ejercicio5.html
@@ -113,6 +113,41 @@
            <img src="imagen6.jpg" alt="">
            <img src="imagen7.jpg" alt="">
            <img src="imagen8.jpg" alt="">
+           <hr>
+           <h1>Cabañas del Indio</h1>
+           <p>El proyecto CABAÑAS del INDIO nace en el amor y agradecimiento a mi pueblo Tinogasteño.
+            Este esfuerzo familiar en ejecución está orientado a brindar los mejores servicios al turismo.
+            Para ello ya contamos con un bloque de dos cabañas, entre otras en marcha, que ya está habilitada y consta de: Cocina-comedor equipada con una mesa, cinco sillas, heladera, horno eléctrico con dos anafes, TV led de 30', ventilador de techo de madera. -- Dos dormitorios.
+            Uno de ellos está equipado con un somier de 2 1/2 plazas, mesa de luz, veladores, aire acondicionado Split frío/calor. El otro dormitorio tiene dos somier de 1 1/2 plaza, mesa de luz, velador, aire acondicionado Split frío/calor.
+            Cocina-comedor equipada con una mesa, cinco sillas, heladera, horno eléctrico con dos anafes, TV led de 30', ventilador de techo de madera. -- Dos dormitorios. Uno de ellos está equipado con un somier de 2 1/2 plazas, mesa de luz, veladores, aire acondicionado Split frío/calor. El otro dormitorio tiene dos somier de 1 1/2 plaza, mesa de luz, velador, aire acondicionado Split frío/calor.
+            Cada cabaña con su correspondiente baño y ante baño, termotanque.
+            Hay mata fuego en cada cabaña.
+            Cada cabaña tiene su asados y su quincho parrillero que tambien sirve de proteccioón al auto.
+            Si bien son cabañas para cuatro personas, hay espacio suficiente para agregar otro somier si hiciera falta.
+            También se cuenta con un servicio completo de vajilla y toilette.
+            En breve habilitaremos otro bloque de cabañas de un dormitorio y el salón de recepción.
+            Nuestras cabañas se encuentran en calle Moreno 165.
+            FORMAS DE PAGO: Efectivo, Tarjetas de Crédito y débito, Transferencia bancaria.</p>
+            <img src="imagen9.jpg" alt="">
+            <img src="imagen10.jpg" alt="">
+            <img src="imagen11.jpg" alt="">
+            <hr>
+            <h1>Hotel Nicolas</h1>
+            <p>"Hotel Nicolas" (Tinogasta/Catamarca) es un emprendimiento familiar.
+                FUE CREADO EN EL AÑO 1963 POR SU DUEÑO DON NICOLAS OLIVERA Y SU SEÑORA ESPOSA DALMIRA NIEVA DE OLIVERA. ERA UNA CASA MUY GRANDE DONDE VIVÍA CON SU FAMILIA. TODO COMENZÓ CUANDO UN DÍA CONVERSANDO CON VIAJANTES QUIENES LE COMENTARON QUE NO HABIA LUGAR PARA ALOJARSE, DECIDE ABRIR LAS PUERTAS DE SU HOGAR PARA DAR VIDA AL HOTEL NICOLAS Y TAMBIEN BRINDAR EL SERVICIO DE ALMUERZO Y CENA A SUS CLIENTES.</p>
+            <p>Ubicado en calle Presidente Perón 231 y cuenta con los siguientes servicios:</p>
+            <ul style="list-style-type:disc";>
+                <li>Habitaciones con baño privado</li>
+                <li>Aire acondicionado/calefacción</li>
+                <li>Televisión por cable</li>
+                <li>Wifi</li>
+                <li>Desayuno incluido</li>
+                <li>Playa de estacionamiento</li>
+                <li>Limpieza/Lavandería</li>
+                <li>Atención personalizada las 24 hs.</li>
+                <li>FORMAS DE PAGO: Efectivo. Depósitos o Transferencias.</li>
+
+            </ul>
 
     </section>
     <footer>
