--- a/css/Ejercicio10/Ejercicio10.html
+++ b/css/Ejercicio10/Ejercicio10.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exersice10</title>
+    <style>
+        #primer::first-letter, .primerletra::first-letter{
+            font-weight: bold;
+            color: aqua;
+        }
+
+
+    </style>
 </head>
 <body>
-    
+    <p class="primerletra">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe aspernatur ipsa sit eligendi iusto! Amet delectus inventore quibusdam. Dolore perspiciatis doloribus explicabo tenetur magni deleniti animi repudiandae quaerat reprehenderit maiores?
+    </p>
+    <p id="primer">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. At officiis illum obcaecati velit ipsam! Earum quisquam eaque cum assumenda explicabo ea mollitia ut, distinctio autem quae, dolorem optio hic est.
+    </p>
+    <p class="primerletra">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore suscipit voluptatem cumque laboriosam? Temporibus ipsam sequi officiis modi ipsum, illum velit ab sunt iusto ullam voluptatibus nostrum sit ea quibusdam.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, tempora enim! Incidunt hic cupiditate, quo, vero voluptate maxime aspernatur enim non ipsum voluptatibus odio! Esse sapiente explicabo suscipit deserunt quidem.
+    </p>
+
 </body>
 </html>
